# Read_pdfLLM

./: README.md  mkdocs.yml  pyproject.toml
app/: Chroma2.py  Faiss.py  chroma.py  create_functions.py  main.py
docs/: chroma.md  create_functions.md  faiss.md  main.md  test_llm.md
tests/: test_llm.py
